--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 a {text-decoration: none;}
 #wrapper {width: 40%;
           background: #fff;
-          margin: 10% auto;  }          
-h1,p,form {text-align:center;}  
+          margin: 10% auto;  
+          text-align:center;}          
+.hffeed2,h1,p,form,$word,a,a: {text-align:center;}  
 input,img{ display:block;
     margin-left: auto;        
     margin-right: auto;}       
