--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 a {text-decoration: none;}
 #wrapper {width: 40%;
           background: #fff;
-          margin: 10% auto 2%;
+          margin: 10% auto 4%;
           padding: 0 3%;  
           text-align:center;}          
 h1,p,form,a {text-align:center;}  
@@ -9,10 +9,23 @@ input,img{ display:block;
     margin-left: auto;        
     margin-right: auto;} 
 
-.feed {
+#btomfeed {
            width: 90%;  
-           margin: -2% 5% 5% 5%;
+           margin: 5% 5% 5% 5%;
            color: white;}
          
 body {background: darkblue;   
     width: 100%;}
+
+.button5 {
+        background-color: darkblue;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
